# async-dispatcher

./: Cargo.toml  README.md  testfile.txt
examples/: async.rs  game_loop.rs  hello_world.rs
src/: acquire_resources.rs  dispatcher.rs  lib.rs  required_resources.rs
