[package]
name = "async-dispatcher"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
hashbrown="0.5"
log="0.4"
shred="0.9"
tokio="0.1"
tokio-threadpool="0.1"

[dev-dependencies]
env_logger = "0.6"